0032908: Coding Rules - fix E0349 MSVC compilation error on VS2019/C++20

Get rid of raw C strings in error code to avoid error 0349.
Use std::string instead.